--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ loom {
 			name = "Testmod Data Generation"
 			vmArg("-Dfabric-api.datagen")
 			vmArg("-Dfabric-api.datagen.output-dir=${file("src/testmod/generated")}")
-			vmArg("-Dfabric-api.datagen.modid=tagexclusiontest")
+			vmArg("-Dfabric-api.datagen.modid=relregtest")
 			runDir("build/datagen")
 			source(testmod)
 		}
