Fix clientarguments transitivity

--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
 
-	modCompileOnly modRuntimeOnly("dev.xpple:clientarguments:${project.clientarguments_version}")
+	modCompileOnly modLocalRuntime("dev.xpple:clientarguments:${project.clientarguments_version}")
 }
 
 processResources {
